[gd_scene load_steps=3 format=3 uid="uid://dgg65y8rfle37"]

[ext_resource type="Script" path="res://lab/lab.gd" id="1_1iu1e"]
[ext_resource type="Script" path="res://lab/ip_button.gd" id="2_g2u80"]

[node name="Lab" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1iu1e")

[node name="ChattingLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ChattingLabel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="LineEdit" type="LineEdit" parent="ChattingLabel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SendButton" type="Button" parent="ChattingLabel/HBoxContainer"]
layout_mode = 2
text = "发送"

[node name="MainHBox" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MainHBox"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HostPanelButton" type="Button" parent="MainHBox/MarginContainer"]
custom_minimum_size = Vector2(100, 80)
layout_mode = 2
text = "HOST"

[node name="MarginContainer2" type="MarginContainer" parent="MainHBox"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="JoinPanelButton" type="Button" parent="MainHBox/MarginContainer2"]
custom_minimum_size = Vector2(100, 80)
layout_mode = 2
text = "JOIN
"

[node name="HostVBox" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="HostVBox"]
layout_mode = 2
text = "HOSTING"
horizontal_alignment = 1

[node name="IPButton" type="Button" parent="HostVBox"]
layout_mode = 2
text = "Your IP: 10.147.17.25(click to copy)"
script = ExtResource("2_g2u80")

[node name="LineEdit" type="LineEdit" parent="HostVBox"]
layout_mode = 2
placeholder_text = "port:7777"
expand_to_text_length = true

[node name="LineEdit2" type="LineEdit" parent="HostVBox"]
layout_mode = 2
placeholder_text = "your name(SERVER)"
expand_to_text_length = true

[node name="HostButton" type="Button" parent="HostVBox"]
layout_mode = 2
text = "CLICK TO HOST"

[node name="HostBackButton" type="Button" parent="HostVBox"]
layout_mode = 2
text = "BACK TO MAIN"

[node name="JoinVBox" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TtileLabel" type="Label" parent="JoinVBox"]
layout_mode = 2
text = "JOINING"
horizontal_alignment = 1

[node name="IpLineEdit" type="LineEdit" parent="JoinVBox"]
layout_mode = 2
placeholder_text = "Host IP"

[node name="PortLineEdit" type="LineEdit" parent="JoinVBox"]
layout_mode = 2
placeholder_text = "Host Port(7777)"
expand_to_text_length = true

[node name="LineEdit2" type="LineEdit" parent="JoinVBox"]
layout_mode = 2
placeholder_text = "your name(Client+ID)"
expand_to_text_length = true

[node name="JoinButton" type="Button" parent="JoinVBox"]
layout_mode = 2
text = "CLICK TO JOIN"

[node name="JoinBackButton" type="Button" parent="JoinVBox"]
layout_mode = 2
text = "BACK TO MAIN"

[node name="BottomLabel" type="Label" parent="JoinVBox"]
visible = false
modulate = Color(1, 0, 0, 1)
layout_mode = 2
text = "JOIN FAILED!"
horizontal_alignment = 1

[connection signal="pressed" from="ChattingLabel/HBoxContainer/SendButton" to="." method="_on_send_button_pressed"]
[connection signal="pressed" from="MainHBox/MarginContainer/HostPanelButton" to="." method="_on_host_panel_button_pressed"]
[connection signal="pressed" from="MainHBox/MarginContainer2/JoinPanelButton" to="." method="_on_join_panel_button_pressed"]
[connection signal="pressed" from="HostVBox/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="HostVBox/HostBackButton" to="." method="_on_host_back_button_pressed"]
[connection signal="pressed" from="JoinVBox/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="JoinVBox/JoinBackButton" to="." method="_on_join_back_button_pressed"]
